# nexus_cli

./: .gitignore  CATALYST_IMPLEMENTATION_PROMPT.md  CATALYST_PHASE1_COMPLETE.md  CATALYST_PHASE2_COMPLETE.md  CATALYST_PHASE3_COMPLETE.md  CATALYST_PHASE4_COMPLETE.md  CLAUDE.md  CLIPPY_MAINTENANCE_PLAN.md  Cargo.toml  MAINTENANCE_SPRINT_COMPLETE.md  PLANNING_CATALYST_DESIGN.md  PLANNING_CATALYST_QUICKSTART.md  README.md  TEMP_WARNINGS.md  nexus.toml
examples/: test_embeddings.rs
new_task/: nexus.toml
src/: brain.rs  config.rs  context.rs  embeddings.rs  git_ops.rs  heuristics.rs  history.rs  lib.rs  llm.rs  main.rs  memory.rs  planning.rs  scaffolding.rs  session.rs  state.rs  tasks.rs  templating.rs  watcher.rs
src/catalyst/: engine.rs  generator.rs  mod.rs  prompts.rs  validation.rs
src/commands/: diagnose.rs  gate.rs  init.rs  mod.rs  plan.rs  shell.rs  sprint.rs  task.rs  unlock.rs
src/genesis/: engine.rs  mod.rs  prompts.rs
src/schema/: planning.rs
templates/: claude_template.tera
templates/adhoc/: 00-ADHOC-TASK.md  Task-Approach.md  Task-Capture.md  Task-Validation.md  adhoc-gate-heuristics.json
templates/project/: 00-START-HERE.md  01-Problem-and-Vision.md  02-Scope-and-Boundaries.md  03-Tech-Stack.md  04-Architecture.md  05-MVP-Breakdown.md  06-PROJECT-UNLOCKED.md
templates/project/decisions/: _shortcut-template.md
tests/: gate_context.rs  gate_integration.rs  gate_stress_tests.rs  init_integration.rs  plan_integration.rs  sprint_integration.rs  task_workflow.rs  unlock_integration.rs
tests/fixtures/sample_project/: 00-START-HERE.md  (+5 more)
(+2 files in other folders)
