[package]
name = "nexus_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
anyhow = "1.0"
pulldown-cmark = "0.12"
colored = "2.1"
tera = "1.19"
git2 = "0.18"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
