[package]
name = "nexus"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
pulldown-cmark = "0.12"
colored = "2.1"
tera = "1.19"
git2 = "0.18"
rustyline = "14.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
qdrant-client = "1.12"
notify = "6.1"
crossbeam-channel = "0.5"
hostname = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde_urlencoded = "0.7"
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }
tokenizers = "0.20"
ndarray = "0.16"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
